--- a/header.html
+++ b/header.html
@@ -1,3 +1,36 @@
+<!DOCTYPE html>
+<html lang="zxx">
+
+
+<!-- Mirrored from andit.co/projects/html/jago-welfare/index-3.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 05 Nov 2024 15:38:52 GMT -->
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Title -->
+    <title>Home - Jago Welfare </title>
+    <!-- Bootstrap css -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <!-- animate css -->
+    <!-- <link rel="stylesheet" href="assets/css/animate.min.css" /> -->
+    <!-- Fontawesome css -->
+    <link rel="stylesheet" href="assets/css/fontawesome.all.min.css" />
+    <!-- owl.carousel css -->
+    <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
+    <!-- owl.theme.default css -->
+    <link rel="stylesheet" href="assets/css/owl.theme.default.min.css" />
+    <!-- Magnific popup css -->
+    <link rel="stylesheet" href="assets/css/magnific-popup.min.css" />
+    <!-- navber css -->
+    <link rel="stylesheet" href="assets/css/navber.css" />
+    <!-- meanmenu css -->
+    <link rel="stylesheet" href="assets/css/meanmenu.css" />
+    <!-- Style css -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- Responsive css -->
+    <link rel="stylesheet" href="assets/css/responsive.css" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/img/favicon.png">
+</head>
 <header class="main_header_arae">
     <!-- Top Bar -->
     <div class="topbar-area">
@@ -64,12 +97,6 @@
                             <li class="nav-item">
                                 <a href="gallery-grid.html" class="nav-link">Gallery</a>
                             </li>
-                            <!-- <li class="nav-item">
-                                <a href="news.html" class="nav-link">News</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="testimonials.html" class="nav-link">testimonials</a>
-                            </li> -->
                             <li class="nav-item">
                                 <a href="contact.html" class="nav-link">Contact</a>
                             </li>
@@ -112,3 +139,31 @@
         </div>
     </div>
 </header>
+
+
+<script src="assets/js/jquery.min.js"></script>
+    <!-- Bootstrap js -->
+    <script src="assets/js/bootstrap.bundle.js"></script>
+    <!-- Meanu js -->
+    <script src="assets/js/jquery.meanmenu.js"></script>
+    <!-- Magnific Popup js -->
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>
+    <!-- owl carousel js -->
+    <script src="assets/js/owl.carousel.min.js"></script>
+    <!-- wow.js -->
+    <script src="assets/js/wow.min.js"></script>
+    <!-- waypoints.js -->
+    <script src="assets/js/waypoints.min.js"></script>
+    <!-- counterup.js -->
+    <script src="assets/js/jquery.counterup.min.js"></script>
+    <!-- Custom js -->
+    <script src="assets/js/custom.js"></script>
+    <script src="assets/js/custom-progress-bar.js"></script>
+    <script src="assets/js/custom-scroll-count.js"></script>
+    <script src="assets/js/video.js"></script>
+
+</body>
+
+
+<!-- Mirrored from andit.co/projects/html/jago-welfare/index-3.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 05 Nov 2024 15:39:10 GMT -->
+</html>
