--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <!-- animate css -->
-    <!-- <link rel="stylesheet" href="assets/css/animate.min.css" /> -->
+    <link rel="stylesheet" href="assets/css/animate.min.css" />
     <!-- Fontawesome css -->
     <link rel="stylesheet" href="assets/css/fontawesome.all.min.css" />
     <!-- owl.carousel css -->
